<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_row="0"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/update_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/update_layout_grid"
        android:layout_width="351dp"
        android:layout_height="539dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLt"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_full_name"
            app:boxBackgroundColor="@color/white"
            app:layout_column="0"
            app:layout_row="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_user_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_address"
            app:boxBackgroundColor="@color/white"
            app:layout_column="0"
            app:layout_row="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="4" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_pin_code"
            app:boxBackgroundColor="@color/white"
            app:layout_column="0"
            app:layout_row="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_user_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_dob"
            app:boxBackgroundColor="@color/white"
            app:layout_column="0"
            app:layout_row="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_user_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:paddingStart="10sp"
            android:text="@string/string_gender"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_row="4"
            tools:ignore="RtlSymmetry" />


        <RadioGroup
            android:id="@+id/radio_grp_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="5"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_btn_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/string_male"
                android:padding="15dp"
                android:layout_marginHorizontal="50dp"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_btn_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Female"
                app:layout_row="5"
                android:padding="15dp"/>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_update_details"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_update_details"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="25sp"
            app:cornerRadius="10dp"
            app:layout_column="0"
            app:layout_gravity="right"
            app:layout_row="9" />

    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>